added grid change button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <title>Etch A Sketch</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h1>Etch A Sketch</h1>
+    </header>
+    <button>
+        Change grid Size ?
+    </button>
     <div class="divcontainer">
 
     </div>
+    
 </body>
 </html>
