adjusted css to reflect adjusted grid size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Etch A Sketch</h1>
     </header>
-    <button>
+    <button id="grid_button">
         Change grid Size ?
     </button>
     <div class="divcontainer">
