added reset functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="divcontainer">
 
     </div>
-    
+    <button id="reset_button">
+        Reset
+    </button>
 </body>
 </html>
